--- a/SurfsUp/Data_Surfing.ipynb
+++ b/SurfsUp/Data_Surfing.ipynb
@@ -176,9 +176,8 @@
    "outputs": [],
    "source": [
     "# save references to each table\n",
-    "#see cell 6 for answer\n",
     "\n",
-    "\n"
+    "#see cell 6 for answer\n"
    ]
   },
   {
@@ -189,7 +188,8 @@
    "outputs": [],
    "source": [
     "# Create our session (link) from Python to the DB\n",
-    "#See line 13 for answer"
+    "\n",
+    "#See cell 13 for answer"
    ]
   },
   {
@@ -223,10 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9f838ff8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2017-08-23',)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "62ade380",
    "metadata": {},
    "outputs": [
@@ -247,7 +258,7 @@
        "datetime.date(2016, 8, 23)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c2bf80d1",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1282,7 @@
        " ...]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "c559f2c5",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1403,7 @@
        "[2230 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "b26124b3",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1524,7 @@
        "[2230 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,8 +1535,7 @@
     "\n",
     "sortedRain\n",
     "\n",
-    "#going to use session.query( alot\n",
-    "                   #       )\n",
+    "#going to use session.query( alot  )\n",
     "\n",
     "\n",
     "#func.count, func.min, .avg, .max when it comes to lowest highest yadayaday temperateure\n",
@@ -1537,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "26a7b56e",
    "metadata": {},
    "outputs": [],
@@ -1549,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "9b60f9a0",
    "metadata": {},
    "outputs": [
@@ -1572,35 +1582,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "1cab6f72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2021.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.177279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.461190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.130000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       precipitation\n",
+       "count    2021.000000\n",
+       "mean        0.177279\n",
+       "std         0.461190\n",
+       "min         0.000000\n",
+       "25%         0.000000\n",
+       "50%         0.020000\n",
+       "75%         0.130000\n",
+       "max         6.700000"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use Pandas to calculate the summary statistics for the precipitation data\n",
-    "\n"
+    "\n",
+    "allRain = sortedRain.describe(include = \"all\")\n",
+    "allRain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eb2367f",
+   "metadata": {},
+   "source": [
+    "## Exploratory Station Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "0c88c5df",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sqlalchemy.ext.automap.station"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StationReference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b2fad4ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\n",
+      "station\n",
+      "name\n",
+      "latitude\n",
+      "longitude\n",
+      "elevation\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in inspector.get_columns('station'):\n",
+    "    print(x[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d9697e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9,)]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Design a query to calculate the total number of stations in the dataset\n",
+    "\n",
+    "stationNum = session.query(func.count(StationReference.station)).all()\n",
+    "stationNum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "75e9a941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Station USC00519281 has the highest number of observations.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
+    "# List the stations and their counts in descending order.\n",
+    "\n",
+    "allStation = session.query(MeasureReference.station, func.count(MeasureReference.station)).\\\n",
+    "group_by(MeasureReference.station).order_by(func.count(MeasureReference.station).desc()).all()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f\"Station USC00519281 has the highest number of observations.\")\n",
+    "allStation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6640b45b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "session.query(MeasureReference.station, func.min(MeasureReference.tobs), func.max(MeasureReference.tobs),\\\n",
+    "func.avg(MeasureReference.tobs)).filter(MeasureReference.station == \"USC00519281\").all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2fc10222",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10860\\3449846410.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msortedRain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMeasureReference\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasureReference\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstation\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"USC00519281\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pyviz\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'date'"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the most active station id\n",
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "bins = 12\n",
+    "\n",
+    "session.query(sortedRain.date, MeasureReference.tobs).filter(results).\\\n",
+    "filter(MeasureReference.station == \"USC00519281\").all()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b5f2b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9697e51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75e9a941",
+   "id": "a80d4ca6",
    "metadata": {},
    "outputs": [],
    "source": []
